added a new file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="main">
         <nav class="main-menu">
-            <img src="../microsoft/microsoftlogo.png" alt="microsoft logo">
+            <img src="../first.repo/microsoft/microsoftlogo.png" alt="microsoft logo">
             <ul class="first-ul show">
                 <li><a href="#">Office</a></li>
                 <li><a href="#">Windows</a></li>
